--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2> Manoj S</h2>
             <span class="subheading">Web Developer</span>
             
-            <p>The colorful and iconic CSS avatars are no longer just for members of the CSS team and its Avengers-caliber group of code reviewers. You can CSSfy your photo today!</p>
+            <p>The colorful and iconic CSS avatars are no longer just for members of the CSS team and its Avengers-caliber group of code reviewers!</p>
             
             <form>
                 <input type="text" required placeholder="Name" aria-label="Name">
